--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     <div class="wrapper">
       <header>
         <h1>Gowtham Kaki</h1>
+        <div id="profile-image">
+          <img src="images/profile-image.jpg" />
+        </div>
+        <div class="contact">
+          <h4>Office</h4>
+          305, N University Street,
+          LWSN 3133-14.
+        </div>
+        <div class="contact">
+          <h4>email</h4>
+          g &lt;lastname&gt; at cs dot purdue dot edu
+        </div>
         <p></p>
 
 
