Added PurPL and other presentations

--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
         </div>
         <p></p>
 
-
-        <p class="view"><a href="https://github.com/gowthamk">View My GitHub Profile</a></p>
-
       </header>
       <section>
         <p>I am a PhD student in Programming Languages at <a href="http://cs.purdue.edu">Purdue CS</a>. My advisor is <a href="https://www.cs.purdue.edu/homes/suresh">Prof. Suresh Jagannathan</a>. The focus of my work is on constructing automated verification procedures for higher-order programs. My research interests lie in type systems, static analysis and automated theorem proving.</p>
@@ -41,6 +38,49 @@
 
 <h3>
 <a name="talks-and-publications" class="anchor" href="#talks-and-publications"><span class="octicon octicon-link"></span></a>Talks and Publications</h3>
+        <p class="pub-item">
+          <div class="pub-title"> A Relational Framework for
+          Higher-Order Shape Analysis</div>
+          with Suresh Jagannathan. At Mid-west Verification Day
+          (MVD'13), Chicago. 
+          [<a href="docs/mvd13.pdf">pdf</a>] <br />
+          Slides from Suresh Jagannathan's talk at Higher-Order
+          Program Analysis Workshop (HOPA'13), Chicago: 
+          [<a href="docs/hopa13.pdf">pdf</a>]<br />
+          An implementation of this framework (in Standard ML) for
+          first-order programs is available from 
+          <a href="https://github.com/gowthamk/catalyst">github</a>.
+           We should be able to make full implementation available
+          shortly (hopefully!).
+        </p>
+        <p class="pub-item">
+          <div class="pub-title"> A Novel Adaptive Scheduling
+          Algorithm for Computational Grids</div>
+          with S Bansal, and Chittaranjan Hota. At IEEE IMSAA'09,
+          Bangalore.
+          [<a
+          href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5439445&tag=1">IEEE</a>] <br />
+        </p>
+<h3>
+<a name="links" class="anchor" href="#software"><span
+class="octicon octicon-link"></span></a>Links</h3>
+          <div class="misc-item"> Relational verification framework implementation [<a
+          href="https://github.com/gowthamk/catalyst">Catalyst</a>]</div>
+          <div class="misc-item"> MLton FFI interface generator for Z3 C API [<a
+          href="https://github.com/gowthamk/Z3MLton">Z3MLton</a>]</div>
+          <div class="misc-item"> A talk that I prepared for Purdue PL reading group
+          (PurPL) on Dependently typed programming with GADTs and Type-functions [<a
+          href="docs/purpl-gadt/index.html">Fun with GADTs</a>]</div>
+          <div class="misc-item"> I <a
+          href="https://github.com/gowthamk/ee570/blob/master/minsat.rkt">implemented</a> <a
+          href="http://ijcai.org/papers11/Papers/IJCAI11-108.pdf">MinSATZ</a> algorithm for
+          Minimum Satisfiability problem, after fixing few
+          (presumably) inconsistencies (Caveat: I may be
+          wrong. Please let me know if I am!). Here is a term
+          paper that I wrote for EE570 course at Purdue that describes
+          these inconsistencies and presents a modified MinSATZ : [<a
+          href="docs/minsatzee570.pdf">pdf</a>]. Here is a talk
+          on the same: [<a href="docs/ee570.pdf">pdf</a>]</div>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
