--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           (MVD'13), Chicago. 
           [<a href="docs/mvd13.pdf">pdf</a>] <br />
           Slides from Suresh Jagannathan's talk at Higher-Order
-          Program Analysis Workshop (HOPA'13), Chicago: 
+          Program Analysis Workshop (HOPA'13), New Orleans: 
           [<a href="docs/hopa13.pdf">pdf</a>]<br />
           An implementation of this framework (in Standard ML) for
           first-order programs is available from 
