--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           LWSN 3133-14.
         </div>
         <div class="contact">
-          <h4>email</h4>
+          <h4>E-mail</h4>
           g &lt;lastname&gt; at cs dot purdue dot edu
         </div>
         <p></p>
@@ -65,22 +65,35 @@
 <a name="links" class="anchor" href="#software"><span
 class="octicon octicon-link"></span></a>Links</h3>
           <div class="misc-item"> Relational verification framework implementation [<a
-          href="https://github.com/gowthamk/catalyst">Catalyst</a>]</div>
+          href="https://github.com/gowthamk/catalyst">Catalyst github</a>]</div>
           <div class="misc-item"> MLton FFI interface generator for Z3 C API [<a
-          href="https://github.com/gowthamk/Z3MLton">Z3MLton</a>]</div>
+          href="https://github.com/gowthamk/Z3MLton">Z3MLton github</a>]</div>
           <div class="misc-item"> A talk that I prepared for Purdue PL reading group
           (PurPL) on Dependently typed programming with GADTs and Type-functions [<a
-          href="docs/purpl-gadt/index.html">Fun with GADTs</a>]</div>
+          href="docs/purpl-gadt/index.html">Fun with GADTs html</a>]. The
+          talk contains links to some interesting code examples.
+          </div>
+          <div class="misc-item"> Another PurPL talk (<a
+          href="docs/bidir/index.html">html</a>) on Joshua
+          Dunfield, and Neel Krishnaswami's <a
+          href="http://www.mpi-sws.org/~neelk/bidir.pdf">ICFP'13
+          paper (pdf)</a>.
+          </div>
           <div class="misc-item"> I <a
           href="https://github.com/gowthamk/ee570/blob/master/minsat.rkt">implemented</a> <a
           href="http://ijcai.org/papers11/Papers/IJCAI11-108.pdf">MinSATZ</a> algorithm for
-          Minimum Satisfiability problem, after fixing few
-          (presumably) inconsistencies (Caveat: I may be
+          Minimum Satisfiability problem, after fixing, what I believe
+          to be, few inconsistencies (Caveat: I may be
           wrong. Please let me know if I am!). Here is a term
           paper that I wrote for EE570 course at Purdue that describes
           these inconsistencies and presents a modified MinSATZ : [<a
           href="docs/minsatzee570.pdf">pdf</a>]. Here is a talk
           on the same: [<a href="docs/ee570.pdf">pdf</a>]</div>
+          <div class="misc-item">
+            I attended the incredible Oregon PL Summer School
+            (<a
+            href="http://www.cs.uoregon.edu/research/summerschool/summer13/">OPLSS'13</a>) at Eugene.
+          </div>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
