Fixed broken link. Added even-odd example link.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ class="octicon octicon-link"></span></a>Links</h3>
           <div class="misc-item">
             I attended the incredible Oregon PL Summer School
             (<a
-            href="http://www.cs.uoregon.edu/research/summerschool/summer13/">OPLSS'13</a>) at Eugene.
+            href="http://www.cs.uoregon.edu/research/summerschool/summer13/curriculum.html">OPLSS'13</a>) at Eugene.
           </div>
       </section>
       <footer>
