--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
           Slides from Suresh Jagannathan's talk at Higher-Order
           Program Analysis Workshop (HOPA'13), New Orleans: 
           [<a href="docs/hopa13.pdf">pdf</a>]<br />
+          Paper currently under ICFP review:
+          [<a href="docs/icfp2014.pdf">pdf</a>]<br />
           An implementation of this framework (in Standard ML) for
-          first-order programs is available from 
+          is available from 
           <a href="https://github.com/gowthamk/catalyst">github</a>.
-           We should be able to make full implementation available
-          shortly (hopefully!).
+          
         </p>
         <p class="pub-item">
           <div class="pub-title"> A Novel Adaptive Scheduling
