Catalyst web interface link added.

--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
           Program Analysis Workshop (HOPA'13), New Orleans: 
           [<a href="docs/hopa13.pdf">pdf</a>]<br />
           Paper currently under ICFP review:
-          [<a href="docs/icfp2014.pdf">pdf</a>]<br />
+          [<a href="docs/icfp2014.pdf">pdf</a>] [<a
+            href="errata.html">Errata</a>]. <br />
           An implementation of this framework (in Standard ML) for
           is available from 
-          <a href="https://github.com/gowthamk/catalyst">github</a>.
+          <a href="https://github.com/gowthamk/catalyst">github</a>.<br />
+          A <a href="http://tycon.github.io/catalyst/">web interface</a> for Catalyst is now available!
           
         </p>
         <p class="pub-item">
