--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           Slides from Suresh Jagannathan's talk at Higher-Order
           Program Analysis Workshop (HOPA'13), New Orleans: 
           [<a href="docs/hopa13.pdf">pdf</a>]<br />
-          Paper currently under ICFP review:
+          Paper accepted to ICFP'14:
           [<a href="docs/icfp2014.pdf">pdf</a>]. <br />
           An implementation of this framework (in Standard ML) for
           is available from 
