--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
 <p>Before starting my PhD I was a front-end engineer at <a href="http://in.yahoo.com/">Yahoo! SDC, Bangalore, India</a>. I graduated with B.E in Computer Science from <a href="http://csis.bits-pilani.ac.in/">BITS, Pilani, India</a> in 2009.</p>
 
+<p> I am now (Summer, 2014)interning at <a
+href="http://research.microsoft.com/en-us/labs/india/"> Microsoft
+Research India</a> </p>
+
 <h3>
 <a name="talks-and-publications" class="anchor" href="#talks-and-publications"><span class="octicon octicon-link"></span></a>Talks and Publications</h3>
         <p class="pub-item">
