--- a/index.html
+++ b/index.html
@@ -36,23 +36,23 @@
 
 <p>Before starting my PhD I was a front-end engineer at <a href="http://in.yahoo.com/">Yahoo! SDC, Bangalore, India</a>. I graduated with B.E in Computer Science from <a href="http://csis.bits-pilani.ac.in/">BITS, Pilani, India</a> in 2009.</p>
 
-<p> I am now (Summer, 2014) interning at <a
-href="http://research.microsoft.com/en-us/labs/india/"> Microsoft
-Research India</a> </p>
+<p> I finished my 2014 summer internship at Microsoft Research India </p>
 
 <h3>
 <a name="talks-and-publications" class="anchor" href="#talks-and-publications"><span class="octicon octicon-link"></span></a>Talks and Publications</h3>
         <p class="pub-item">
           <div class="pub-title"> A Relational Framework for
           Higher-Order Shape Analysis</div>
-          with Suresh Jagannathan. At Mid-west Verification Day
+          (with Suresh Jagannathan) At ICFP'14. [<a
+          href="docs/icfp2014.pdf">Paper</a>][<a
+          href="docs/icfp2014.key">Slides</a>][<a
+          href="https://www.youtube.com/watch?v=SOjvCx2ZjWA&list=UUP9g4dLR7xt6KzCYntNqYcw&index=9">Talk Video</a>] <br />
+          Slides from my talk at Mid-west Verification Day
           (MVD'13), Chicago. 
           [<a href="docs/mvd13.pdf">pdf</a>] <br />
           Slides from Suresh Jagannathan's talk at Higher-Order
           Program Analysis Workshop (HOPA'13), New Orleans: 
           [<a href="docs/hopa13.pdf">pdf</a>]<br />
-          Paper accepted to ICFP'14:
-          [<a href="docs/icfp77-kaki.pdf">pdf</a>]. <br />
           An implementation of this framework (in Standard ML) for
           is available from 
           <a href="https://github.com/gowthamk/catalyst">github</a>.<br />
