Removed Caveat with MinSatz

--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@ class="octicon octicon-link"></span></a>Links</h3>
           href="https://github.com/gowthamk/ee570/blob/master/minsat.rkt">implemented</a> <a
           href="http://ijcai.org/papers11/Papers/IJCAI11-108.pdf">MinSATZ</a> algorithm for
           Minimum Satisfiability problem, after fixing, what I believe
-          to be, few inconsistencies (Caveat: I may be
-          wrong. Please let me know if I am!). Here is a term
+          to be, few inconsistencies. Here is a term
           paper that I wrote for EE570 course at Purdue that describes
           these inconsistencies and presents a modified MinSATZ : [<a
           href="docs/minsatzee570.pdf">pdf</a>]. Here is a talk
