Quelea link added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
 <h3>
 <a name="talks-and-publications" class="anchor" href="#talks-and-publications"><span class="octicon octicon-link"></span></a>Talks and Publications</h3>
         <p class="pub-item">
+          <div class="pub-title">
+            <div>Declarative Programming over Eventually Consistent Data
+            Stores</div>
+            (with KC Sivaramakrishnan, and Suresh Jagannathan) At
+            PLDI'15 [<a href="docs/quelea.pdf">Paper</a>] <br />
+            Haskell implemementation of the programming framework
+            (called Quelea) is available on <a
+            href="https://github.com/kayceesrk/Quelea">github</a>
+          </div>
           <div class="pub-title"> A Relational Framework for
           Higher-Order Shape Analysis</div>
           (with Suresh Jagannathan) At ICFP'14. [<a
