--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Stores
           </div>
           (with KC Sivaramakrishnan, and Suresh Jagannathan) At
-          PLDI'15 [<a href="docs/quelea.pdf">Paper</a>] <br />
+          PLDI'15 [<a href="docs/quelea.pdf">Draft Paper</a>] <br />
           Haskell implemementation of the programming framework
           (called Quelea) is available on <a
           href="https://github.com/kayceesrk/Quelea">github</a>
