--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           latest research pursuits <a href="http://tycon.github.io/">here</a>.
           </p>
 
-  <p>Before starting my PhD I was a front-end engineer at Yahoo! SDC,
+  <p>Before starting my Ph.D I was a front-end engineer at Yahoo! SDC,
   Bangalore, where I built publishing tools for Yahoo's editors.
-  I graduated with B.E in Computer Science from <a
-    href="http://csis.bits-pilani.ac.in/">BITS, Pilani, India</a> in
+  I graduated with B.E (Hons.) in Computer Science from <a
+    href="http://www.bits-pilani.ac.in/pilani/computerscience/ComputerScience">BITS, Pilani, India</a> in
   2009.</p>
 
   <p> I did my 2014 and 2015 summer internships at Microsoft Research
@@ -66,73 +66,127 @@
               Declarative Programming over Eventually Consistent Data
               Stores
             </div>
-            (with KC Sivaramakrishnan, and Suresh Jagannathan) At
-            PLDI'15 [<a href="docs/quelea.pdf">Paper</a>] <br />
-            Haskell implemementation of the programming framework
-            (called Quelea) is available on <a
-            href="https://github.com/kayceesrk/Quelea">github</a>
+            (with KC Sivaramakrishnan, and Suresh Jagannathan) 
+            <ul>
+              <li> 
+                Proceedings of 36th Annual ACM SIGPLAN conference on
+                Programming Language Design and Implementation
+                (PLDI'15), Portland, USA. [<a href="docs/quelea.pdf">Paper</a>] 
+              </li>
+              <li>
+                Purdue CS Technical Reports TR-15-002 [<a
+                  href="http://docs.lib.purdue.edu/cstech/1776/">Full version</a>]
+              </li>
+          </ul>
           </p>
 
           <p class="pub-item">
             <div class="pub-title"> A Relational Framework for
-            Higher-Order Shape Analysis</div>
-            (with Suresh Jagannathan) At ICFP'14. [<a
-            href="docs/icfp2014.pdf">Paper</a>][<a
-            href="docs/icfp2014.key">Slides</a>][<a
-            href="https://www.youtube.com/watch?v=SOjvCx2ZjWA&list=UUP9g4dLR7xt6KzCYntNqYcw&index=9">Talk Video</a>] <br />
-            Slides from my talk at Mid-west Verification Day
-            (MVD'13), Chicago. 
-            [<a href="docs/mvd13.pdf">pdf</a>] <br />
-            Slides from Suresh Jagannathan's talk at Higher-Order
-            Program Analysis Workshop (HOPA'13), New Orleans: 
-            [<a href="docs/hopa13.pdf">pdf</a>]<br />
-            An implementation of this framework (in Standard ML) for
-            is available from 
-            <a href="https://github.com/gowthamk/catalyst">github</a>.<br />
-            A <a href="http://tycon.github.io/catalyst/">web interface</a> for Catalyst is now available!
+              Higher-Order Shape Analysis</div>
+              (with Suresh Jagannathan)
+            <ul>
+              <li> 
+                Proceedings of 19th ACM SIGPLAN International
+                Conference on Functional Programming (ICFP'14),
+                Gothenburg, Sweden. [<a href="docs/icfp2014.pdf">Paper</a>]
+              </li> 
+              <li>
+              Purdue CS Technical Reports TR-14-002 [<a href="http://docs.lib.purdue.edu/cstech/1772/">Full version</a>]
+              </li>
+          </ul>
             
           </p>
           <p class="pub-item">
             <div class="pub-title"> A Novel Adaptive Scheduling
             Algorithm for Computational Grids</div>
-            with S Bansal, and Chittaranjan Hota. At IEEE IMSAA'09,
-            Bangalore.
-            [<a
-            href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5439445&tag=1">IEEE</a>] <br />
+            (with S Bansal, and Chittaranjan Hota) 
+            <ul>
+              <li>Proceedings of 5th IEEE
+              International Conference on Internet Multimedia Systems
+              Architecture and Application (IMSAA'09), Bangalore.
+              [<a
+              href="http://www.researchgate.net/publication/224127688_Novel_adaptive_scheduling_algorithm_for_computational_grid">Paper</a>]
+              </li>
+            </ul>
           </p>
-  <h3 class="section-header"> Links</h3>
-            <div class="misc-item"> Relational verification framework implementation [<a
-            href="https://github.com/gowthamk/catalyst">Catalyst github</a>]</div>
-            <div class="misc-item"> MLton FFI interface generator for Z3 C API [<a
-            href="https://github.com/gowthamk/Z3MLton">Z3MLton github</a>]</div>
-            <div class="misc-item"> A talk that I prepared for Purdue PL reading group
-            (PurPL) on Dependently typed programming with GADTs and Type-functions [<a
-            href="docs/purpl-gadt/index.html">Fun with GADTs html</a>]. The
-            talk contains links to some interesting code examples.
-            </div>
-            <div class="misc-item"> Another PurPL talk (<a
-            href="docs/bidir/index.html">html</a>) on Joshua
-            Dunfield, and Neel Krishnaswami's <a
-            href="http://www.mpi-sws.org/~neelk/bidir.pdf">ICFP'13
-            paper (pdf)</a>.
-            </div>
-            <div class="misc-item"> I <a
-            href="https://github.com/gowthamk/ee570/blob/master/minsat.rkt">implemented</a> <a
-            href="http://ijcai.org/papers11/Papers/IJCAI11-108.pdf">MinSATZ</a> algorithm for
-            Minimum Satisfiability problem, after fixing, what I believe
-            to be, few inconsistencies. Here is a term
-            paper that I wrote for EE570 course at Purdue that describes
-            these inconsistencies and presents a modified MinSATZ : [<a
-            href="docs/minsatzee570.pdf">pdf</a>]. Here is a talk
-            on the same: [<a href="docs/ee570.pdf">pdf</a>]</div>
-            <div class="misc-item">
-              I attended the incredible Oregon PL Summer School
-              (<a
-              href="http://www.cs.uoregon.edu/research/summerschool/summer13/curriculum.html">OPLSS'13</a>) at Eugene.
-            </div>
+
+        <h3 class="section-header">Talks</h3>
+        <p class="pub-item">
+          <div class="pub-title"> Broom: Safe Region-based Memory
+            Management for Dataflow Programs</div>
+          <ul>
+            <li>At Microsoft Research India, Bangalore (Summer, 2014).
+            [<a href="docs/Broom-2014.key.zip">Slides</a>]</li>
+          </ul>
+        </p>
+        <p class="pub-item"> 
+          <div class="pub-title"> Declarative Programming over Eventually Consistent Data
+              Stores
+          </div>
+          <ul>
+            <li>At PLDI'15, Portland, OR, USA. [<a href="docs/Quelea-PLDI15.pptx">Slides</a>]
+            </li>
+            <li> At Mid-west Verification Day (MVD'15),
+            Urbana-Champaign, IL, USA.[<a href="docs/Quelea-PLDI15.pptx">Slides</a>] </li>
+            <li> At Microsoft Research India, Bangalore (Summer, 2015).[<a href="docs/Quelea-PLDI15.pptx">Slides</a>] </li>
+          </ul>
+        </p>
+        <p class="pub-item"> 
+          <div class="pub-title">A Relational Framework for Higher-Order
+            Shape Analysis
+          </div>
+          <ul>
+            <li>At ICFP'14, Gothenburg, Sweden. [<a href="docs/icfp2014.key">Slides</a>]
+            [<a href="https://www.youtube.com/watch?v=SOjvCx2ZjWA&list=UUP9g4dLR7xt6KzCYntNqYcw&index=9">Talk Video</a>]
+            </li>
+            <li> At Mid-west Verification Day (MVD'13), Chicago, IL, USA.[<a href="docs/mvd13.pdf">Slides</a>] </li>
+            <li> At Mid-west Verification Day (MVD'14), Columbia, MO, USA.[<a href="docs/mvd14.key">Slides</a>] </li>
+          </ul>
+        </p>
+
+        <h3 class="section-header-long">Research Software</h3>
+          <ul>
+            <li><a href="http://gowthamk.github.io/Quelea">Quelea</a></li>
+            <li><a href="https://github.com/gowthamk/catalyst">Catalyst</a></li>
+            <li><a href="https://github.com/gowthamk/Z3MLton">MLton FFI interface generator</a> for Z3 C API</li>
+          </ul>
+
+        <h3 class="section-header">Trivia</h3>
+        <div class="misc-item"> Among my research interests, type
+          systems particularly capture my imagination. I frequently
+          experiment with, write, and talk about type systems. Some
+          resources:
+          <ul>
+            <li><a href="docs/purpl-gadt/index.html">HTML slides</a>
+            for my talk on Dependently Typed Programming with GADTs
+            and Type-Functions. 
+            </li>
+            <li> <a href="docs/bidir/index.html">HTML slides</a> for
+            my talk on bidirectional type checking in presence of
+            higher-rank polymorphism (Dunfield et al, ICFP'13).
+            </li>
+            <li> A <a href="http://tycon.github.io/ML-type-inference.html">blog
+              post</a> containing an elaborate account on Hindley-Damas-Milner
+            Type inference.
+            </li>
+            <li> A <a
+              href="https://github.com/gowthamk/Lambda/tree/master/gadts">suite
+              of examples</a> that I collected to demonstrate some
+            tricky aspects of type inference in ML, OCaml and Haskell. 
+            </li>
+          </ul>
+        </div>
+        <div class="misc-item"> 
+          If solving puzzles doesn't quite appeal to you, then <a
+            href="http://tycon.github.io/cheryl-birthday.html">try
+            SAT solving them</a>.
+        </div>
+        <div class="misc-item"><a href="https://www.cs.purdue.edu/homes/jindal0/">Abhilash Jindal</a> and I
+          make Pythonesque geek jokes, some of which end up on <a
+            href="http://pcp-comics.com/php/comics/27.php">our geek
+            comic site</a>
+        </div>
         </section>
-        <footer>
-        </footer>
       </div>
       <script src="javascripts/scale.fix.js"></script>
     </div>
