--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="contact">
               <h4 class="contact-header">E-mail</h4>
-              g &lt;lastname&gt; at cs.purdue.edu
+              &lt;firstname&gt; at purdue.edu
             </div>  
           </div>
           <p>I am a Ph.D student in Programming Languages and Software
@@ -44,8 +44,9 @@
           declarative programming framework for NoSQL applications. My
           research interests lie in type systems, program analyses,
           program synthesis, constraint solving, specification
-          languages and axiomatic modeling of systems. I blog about my
-          latest research pursuits <a href="http://tycon.github.io/">here</a>.
+          languages and axiomatic modeling of systems. I frequently
+          blog my research notes <a
+            href="http://tycon.github.io/">here</a>.
           </p>
 
   <p>Before starting my Ph.D I was a front-end engineer at Yahoo! SDC,
