PL Summit Slides added.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             <li> At Mid-west Verification Day (MVD'15),
             Urbana-Champaign, IL, USA.[<a href="docs/Quelea-PLDI15.pptx">Slides</a>] </li>
             <li> At Microsoft Research India, Bangalore (Summer, 2015).[<a href="docs/Quelea-PLDI15.pptx">Slides</a>] </li>
+            <li> At Mid-west PL Summit, West Lafayette, IN, USA.[<a href="docs/Quelea-MPLSummit.pptx">Slides</a>] </li>
           </ul>
         </p>
         <p class="pub-item"> 
