--- a/index.html
+++ b/index.html
@@ -61,7 +61,19 @@
     </div>
 
   <section>
-    <h3 class="section-header">Publications</h3>
+  <h3 class="section-header">Publications</h3>
+          <p class="pub-item">
+            <div class="pub-title">
+              Safe Memory Regions for Big Data Processing
+            </div>
+            (with Ganesan Ramalingam, Kapil Vaswani, and Dimitrios Vytiniotis) 
+            <ul>
+              <li>
+                Purdue CS Technical Reports TR-16-001 
+              </li>
+          </ul>
+          </p>
+
           <p class="pub-item">
             <div class="pub-title">
               Declarative Programming over Eventually Consistent Data
