Added link to Broom TR

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
             (with Ganesan Ramalingam, Kapil Vaswani, and Dimitrios Vytiniotis) 
             <ul>
               <li>
-                Purdue CS Technical Reports TR-16-001 
+              Purdue CS Technical Reports TR-16-001 [<a
+                href="http://docs.lib.purdue.edu/cstech/1778/">Full Version</a>]
               </li>
           </ul>
           </p>
