Added IEEEDE to homepage.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
   <h3 class="section-header">Publications</h3>
           <p class="pub-item">
             <div class="pub-title">
+              Representation without Taxation: A Uniform,
+              Low-Overhead, and High-Level Interface to Eventually
+              Consistent Key-Value Stores
+            </div>
+            (with KC Sivaramakrishnan, and Suresh Jagannathan) 
+            <ul>
+              <li>
+               IEEE Data Engineering Bulletin, March 2016
+              </li>
+          </ul>
+          </p>
+          <p class="pub-item">
+            <div class="pub-title">
               Safe Memory Regions for Big Data Processing
             </div>
             (with Ganesan Ramalingam, Kapil Vaswani, and Dimitrios Vytiniotis) 
