--- a/index.html
+++ b/index.html
@@ -32,31 +32,25 @@
           </div>
           <p>I am a Ph.D student in Programming Languages and Software
           Engineering at <a href="http://cs.purdue.edu">Purdue CS</a>.
-          My advisor is <a href="https://www.cs.purdue.edu/homes/suresh">Prof.
-            Suresh Jagannathan</a>. The focus of my work is on
-          designing new programming language techniques to enhance
-          software integrity and developer productivity. At Purdue, I
-          built <a
-            href="http://tycon.github.io/catalyst/">Catalyst</a>, a
-          dependently typed variant of ML that can automatically
-          verify data structure invariants, and contributed to <a
-            href="http://gowthamk.github.io/Quelea/">Quelea</a>, a
-          declarative programming framework for NoSQL applications. My
-          research interests lie in type systems, program analyses,
-          program synthesis, constraint solving, specification
-          languages and axiomatic modeling of systems. I frequently
-          blog my research notes <a
-            href="http://tycon.github.io/">here</a>.
-          </p>
+          My advisor is <a
+            href="https://www.cs.purdue.edu/homes/suresh">Prof.
+            Suresh Jagannathan</a>. The focus of my current research
+          is on reducing the complexity of programming systems with
+          weak consistency guarantees, such as NoSQL stores (check out
+          <a href="http://gowthamk.github.io/Quelea/">Quelea</a>). I
+          have previously worked on dependent type systems for
+          functional languages (see <a
+            href="http://tycon.github.io/catalyst/">Catalyst</a>) and
+          region type systems for stream processing languages. I
+          frequently blog my research notes <a
+            href="http://tycon.github.io/">here</a>.  </p>
 
-  <p>Before starting my Ph.D I was a front-end engineer at Yahoo! SDC,
+  <p>Previously, I was a front-end engineer at Yahoo! SDC,
   Bangalore, where I built publishing tools for Yahoo's editors.
   I graduated with B.E (Hons.) in Computer Science from <a
     href="http://www.bits-pilani.ac.in/pilani/computerscience/ComputerScience">BITS, Pilani, India</a> in
   2009.</p>
 
-  <p> I did my 2014 and 2015 summer internships at Microsoft Research
-  India.  </p>
     <div style="clear: both"></div>
     </div>
 
@@ -71,7 +65,8 @@
             (with KC Sivaramakrishnan, and Suresh Jagannathan) 
             <ul>
               <li>
-               IEEE Data Engineering Bulletin, March 2016
+              IEEE Data Engineering Bulletin, March 2016. <a
+                href="docs/quelea_ieee16.pdf">Paper</a>
               </li>
           </ul>
           </p>
