--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
           frequently blog my research notes <a
             href="http://tycon.github.io/">here</a>.  </p>
 
-  <p>Previously, I was a front-end engineer at Yahoo! SDC,
-  Bangalore, where I built publishing tools for Yahoo's editors.
-  I graduated with B.E (Hons.) in Computer Science from <a
-    href="http://www.bits-pilani.ac.in/pilani/computerscience/ComputerScience">BITS, Pilani, India</a> in
-  2009.</p>
+  <p>Previously, I spent some time building publishing tools at Yahoo!
+  India.  I earned M.S in CS from Purdue in 2016, and B.E in CS from
+  <a
+    href="http://www.bits-pilani.ac.in/pilani/computerscience/ComputerScience">BITS,
+    Pilani, India</a> in 2009. </p>
 
     <div style="clear: both"></div>
     </div>
@@ -65,8 +65,8 @@
             (with KC Sivaramakrishnan, and Suresh Jagannathan) 
             <ul>
               <li>
-              IEEE Data Engineering Bulletin, March 2016. <a
-                href="docs/quelea_ieee16.pdf">Paper</a>
+              IEEE Data Engineering Bulletin, March 2016. [<a
+                href="docs/quelea_ieee16.pdf">Paper</a>]
               </li>
           </ul>
           </p>
@@ -175,10 +175,9 @@
           </ul>
 
         <h3 class="section-header">Trivia</h3>
-        <div class="misc-item"> Among my research interests, type
-          systems particularly capture my imagination. I frequently
-          experiment with, write, and talk about type systems. Some
-          resources:
+        <!-- div class="misc-item"> During the first 2 years of my Ph.D.,
+          I was really obsessed with type systems. Some things I
+          wrote/made during that time:
           <ul>
             <li><a href="docs/purpl-gadt/index.html">HTML slides</a>
             for my talk on Dependently Typed Programming with GADTs
@@ -198,16 +197,15 @@
             tricky aspects of type inference in ML, OCaml and Haskell. 
             </li>
           </ul>
-        </div>
+        </div -->
         <div class="misc-item"> 
           If solving puzzles doesn't quite appeal to you, then <a
             href="http://tycon.github.io/cheryl-birthday.html">try
             SAT solving them</a>.
         </div>
         <div class="misc-item"><a href="https://www.cs.purdue.edu/homes/jindal0/">Abhilash Jindal</a> and I
-          make Pythonesque geek jokes, some of which end up on <a
-            href="http://pcp-comics.com/php/comics/27.php">our geek
-            comic site</a>
+          make <a
+            href="http://pcp-comics.com/php/comics/27.php">Pythonesque geek jokes</a>
         </div>
         </section>
       </div>
