--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
             href="http://tycon.github.io/cheryl-birthday.html">try
             SAT solving them</a>.
         </div>
-        <div class="misc-item"><a href="https://www.cs.purdue.edu/homes/jindal0/">Abhilash Jindal</a> and I
-          make <a
-            href="http://pcp-comics.com/php/comics/27.php">Pythonesque geek jokes</a>
+        <div class="misc-item">Or, checkout some of our pythonesque <a
+            href="http://pcp-comics.com/php/comics/27.php">geek
+            comics</a>.
         </div>
         </section>
       </div>
