--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
 
   <p>Previously, I spent some time building publishing tools at Yahoo!
   India.  I earned M.S in CS from Purdue in 2016, and B.E in CS from
-  <a
-    href="http://www.bits-pilani.ac.in/pilani/computerscience/ComputerScience">BITS,
-    Pilani, India</a> in 2009. </p>
+  BITS, Pilani, India in 2009. </p>
 
     <div style="clear: both"></div>
     </div>
