--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
             href="http://tycon.github.io/cheryl-birthday.html">try
             SAT solving them</a>.
         </div>
-        <div class="misc-item">Or, checkout some of our pythonesque <a
-            href="http://pcp-comics.com/php/comics/27.php">geek
+        <div class="misc-item">Or, checkout some of our programming<a
+            href="https://www.facebook.com/pcpcomics/">geek
             comics</a>.
         </div>
         </section>
