--- a/index.html
+++ b/index.html
@@ -56,6 +56,34 @@
   <h3 class="section-header">Publications</h3>
           <p class="pub-item">
             <div class="pub-title">
+             Alone Together: Compositional Reasoning and Inference for
+             Weak Isolation
+            </div>
+            (with Kartik Nagar, Mahsa Najafzadeh, and Suresh Jagannathan) 
+            <ul>
+              <li>
+               45th ACM SIGPLAN Symposium on Principles of Programming
+               Languages (POPL), January 2018. [<a
+                 href="docs/popl18.pdf">Paper</a>]
+              </li>
+          </ul>
+          </p>
+          <p class="pub-item">
+            <div class="pub-title">
+          <p class="pub-item">
+            <div class="pub-title">
+             Mergeable Types 
+            </div>
+            (with Samodya Abeysiriwardane, KC Sivaramakrishnan, and Suresh Jagannathan) 
+            <ul>
+              <li>
+              ML Family Workshop, September 2017. [<a
+                href="https://goo.gl/zT4UDn">Paper</a>]
+              </li>
+          </ul>
+          </p>
+          <p class="pub-item">
+            <div class="pub-title">
               Representation without Taxation: A Uniform,
               Low-Overhead, and High-Level Interface to Eventually
               Consistent Key-Value Stores
