Papoc link added.

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
               &lt;firstname&gt; at purdue.edu
             </div>  
           </div>
-          <p>I am a Ph.D student in Programming Languages and Software
-          Engineering at <a href="http://cs.purdue.edu">Purdue CS</a>.
-          My advisor is <a
-            href="https://www.cs.purdue.edu/homes/suresh">Prof.
+          <p>I am a Ph.D <del>student</del> candidate in Programming
+          Languages and Software Engineering at <a
+            href="http://cs.purdue.edu">Purdue CS</a>.  My advisor is
+          <a href="https://www.cs.purdue.edu/homes/suresh">Prof.
             Suresh Jagannathan</a>. The focus of my current research
           is on reducing the complexity of programming systems with
           weak consistency guarantees, such as NoSQL stores (check out
@@ -54,6 +54,19 @@
 
   <section>
   <h3 class="section-header">Publications</h3>
+          <p class="pub-item">
+            <div class="pub-title">
+             Fine-grained Distributed Consistency Guarantees with Effect Orchestration
+            </div>
+            (with Kia Rahmani and Suresh Jagannathan) 
+            <ul>
+              <li>
+               Workshop on Principles and Practice of Consistency
+               for Distributed Data, April 2018. [<a
+                 href="docs/papoc18.pdf">Paper</a>]
+              </li>
+          </ul>
+          </p>
           <p class="pub-item">
             <div class="pub-title">
              Alone Together: Compositional Reasoning and Inference for
