--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <ul>
               <li>
                Workshop on Principles and Practice of Consistency
-               for Distributed Data, April 2018. [<a
+               for Distributed Data (PaPoC), April 2018. [<a
                  href="docs/papoc18.pdf">Paper</a>]
               </li>
           </ul>
