ECOOP18 Draft Added.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <li>
                European Conference on Object-Oriented Programming
                  (ECOOP), July 2018 (To appear)[<a
-                href="http://docs.lib.purdue.edu/cstech/1778/">Tech Report</a>]
+                href="docs/ecoop18.pdf">draft</a>]
               </li>
           </ul>
           </p>
