OOPSLA citation added.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
               &lt;firstname&gt; at purdue.edu
             </div>  
           </div>
-          <p>I am a Ph.D <del>student</del> candidate in Programming
-          Languages and Software Engineering at <a
+          <p>I am a Ph.D candidate in Programming Languages and
+          Software Engineering at <a
             href="http://cs.purdue.edu">Purdue CS</a>.  My advisor is
           <a href="https://www.cs.purdue.edu/homes/suresh">Prof.
             Suresh Jagannathan</a>. The focus of my current research
@@ -61,14 +61,29 @@
   <h3 class="section-header">Publications</h3>
           <p class="pub-item">
             <div class="pub-title">
+              Safe Replication through Bounded Concurrency Verification
+            </div>
+            (Gowtham Kaki, Kapil Earanky, KC Sivaramakrishnan, and Suresh
+            Jagannathan) 
+            <ul>
+              <li>
+               32nd ACM SIGPLAN International Conference on
+               Object-Oriented Programming, Systems, Languages and
+               Applications (OOPSLA), November 2018 (Conditionally
+               Accepted).
+              </li>
+          </ul>
+          </p>
+          <p class="pub-item">
+            <div class="pub-title">
               Safe Transferable Regions
             </div>
-            (with Ganesan Ramalingam) 
+            (Gowtham Kaki and Ganesan Ramalingam) 
             <ul>
               <li>
                European Conference on Object-Oriented Programming
-                 (ECOOP), July 2018 (To appear)[<a
-                href="docs/ecoop18.pdf">draft</a>]
+                 (ECOOP), July 2018. [<a
+                href="docs/ecoop18.pdf">Paper</a>]
               </li>
           </ul>
           </p>
@@ -76,7 +91,7 @@
             <div class="pub-title">
              Fine-grained Distributed Consistency Guarantees with Effect Orchestration
             </div>
-            (with Kia Rahmani and Suresh Jagannathan) 
+            (Kia Rahmani, Gowtham Kaki, and Suresh Jagannathan) 
             <ul>
               <li>
                Workshop on Principles and Practice of Consistency
@@ -90,7 +105,7 @@
              Alone Together: Compositional Reasoning and Inference for
              Weak Isolation
             </div>
-            (with Kartik Nagar, Mahsa Najafzadeh, and Suresh Jagannathan) 
+            (Gowtham Kaki, Kartik Nagar, Mahsa Najafzadeh, and Suresh Jagannathan) 
             <ul>
               <li>
                45th ACM SIGPLAN Symposium on Principles of Programming
@@ -103,7 +118,7 @@
             <div class="pub-title">
              Mergeable Types 
             </div>
-            (with Samodya Abeysiriwardane, KC Sivaramakrishnan, and Suresh Jagannathan) 
+            (Gowtham Kaki, Samodya Abeysiriwardane, KC Sivaramakrishnan, and Suresh Jagannathan) 
             <ul>
               <li>
               ML Family Workshop, September 2017. [<a
@@ -117,7 +132,7 @@
               Low-Overhead, and High-Level Interface to Eventually
               Consistent Key-Value Stores
             </div>
-            (with KC Sivaramakrishnan, and Suresh Jagannathan) 
+            (KC Sivaramakrishnan, Gowtham Kaki, and Suresh Jagannathan) 
             <ul>
               <li>
               IEEE Data Engineering Bulletin, March 2016. [<a
@@ -131,7 +146,7 @@
               Declarative Programming over Eventually Consistent Data
               Stores
             </div>
-            (with KC Sivaramakrishnan, and Suresh Jagannathan) 
+            (KC Sivaramakrishnan, Gowtham Kaki, and Suresh Jagannathan) 
             <ul>
               <li> 
                 Proceedings of 36th Annual ACM SIGPLAN conference on
@@ -145,7 +160,7 @@
           <p class="pub-item">
             <div class="pub-title"> A Relational Framework for
               Higher-Order Shape Analysis</div>
-              (with Suresh Jagannathan)
+              (Gowtham Kaki, and Suresh Jagannathan)
             <ul>
               <li> 
                 Proceedings of 19th ACM SIGPLAN International
@@ -158,7 +173,7 @@
           <p class="pub-item">
             <div class="pub-title"> A Novel Adaptive Scheduling
             Algorithm for Computational Grids</div>
-            (with S Bansal, and Chittaranjan Hota) 
+            (S Bansal, Gowtham Kaki, and Chittaranjan Hota) 
             <ul>
               <li>Proceedings of 5th IEEE
               International Conference on Internet Multimedia Systems
