--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
               <li>
                32nd ACM SIGPLAN International Conference on
                Object-Oriented Programming, Systems, Languages and
-               Applications (OOPSLA), November 2018 (Conditionally
-               Accepted).
+               Applications (OOPSLA), November 2018. [<a
+                 href="docs/q9.pdf">Pre-print</a>]
               </li>
           </ul>
           </p>
