Q9 camera-ready added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                32nd ACM SIGPLAN International Conference on
                Object-Oriented Programming, Systems, Languages and
                Applications (OOPSLA), November 2018. [<a
-                 href="docs/q9.pdf">Pre-print</a>]
+                 href="docs/q9.pdf">Paper</a>]
               </li>
           </ul>
           </p>
