--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     Google PhD Fellow</a> in Programming Technology and Software
   Engineering</p>
 
-  <p><span class="highlight-text" >I am currently on the job market! I
+  <p><span class="highlight-text" >I am currently on the job market. I
     am actively looking for a research position in academia or
     industry.</span></p>
 
